@@ -174,6 +174,8 @@ Release 0.5.0 - Unreleased
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-592 webhcat - handle change in hive table/partition not found error (thejas via gates)
+
   HCAT-586 checkstyle fails every time complaining that it's own header file does not have the proper header (gates)
 
   HCAT-580 Optimizations in HCAT-538 break e2e tests (daijy via gates)
